[package]
name = "traefik-basicauth-rememberme"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
htpasswd-verify = { git = "https://github.com/mike-kfed/htpasswd-verify", branch = "threadsafe" }
http-auth-basic = "0.3.1"
http = "0.2.4"
log = "0.4"
pretty_env_logger = "0.3"
cookie = "0.15.1"