[package]
name = "traefik-basicauth-rememberme"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
htpasswd-verify = { git = "https://github.com/mike-kfed/htpasswd-verify", branch = "threadsafe" }
http-auth-basic = "0.3.1"
http = "0.2.4"
tracing = "0.1"
tracing-subscriber = "0.2"
cookie = { version = "0.15.1", features = ["secure"] }
config = { version = "0.11", default-features = false, features = ["toml", "json"]}
serde = { version = "1.0.130", features = ["derive"] }
derivative = "2.2"
base64 = "0.13"
lazy_static = "1.4"